# flightfinder

./: .gitignore  .overnight-dev.json  README.md  pyproject.toml
docs/plans/: 2025-11-28-flightfinder-design.md  2025-11-28-flightfinder-implementation.md
flightfinder/: __init__.py  cli.py  compare.py  config.py  export.py  interactive.py  models.py  output.py  search.py  skiplagged.py
flightfinder/api/: __init__.py  serpapi.py
flightfinder/db/: __init__.py  database.py  routes.py
tests/: __init__.py  test_cli.py  test_compare.py  test_config.py  test_database.py  test_export.py  test_interactive.py  test_models.py  test_output.py  test_routes.py  test_search.py  test_serpapi.py  test_skiplagged.py
tests/fixtures/: serpapi_response.json
